--- a/public/display.html
+++ b/public/display.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13.4</title>
+  <title>Laserpointer Display v3.13.5</title>
   <style>
     body { margin:0; background:black; }
-    canvas { display:block; margin:auto; background:black; }
+    canvas { display:block; margin:auto; background:black }
     #version {
       position:absolute; top:10px; left:10px;
       color:white; font-family:sans-serif;
@@ -15,12 +15,12 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.13.4 (smoothing re-enabled)</div>
+  <div id="version">v3.13.5 (Bezier smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify", { role:"display", deviceId:null });
+    socket.emit("identify",{ role:"display", deviceId:null });
 
     const c    = document.getElementById("canvas"),
           ctx  = c.getContext("2d"),
@@ -28,11 +28,11 @@
           CY   = c.height/2;
 
     // Admin‐Settings
-    let MAX_H  = 20,
-        MAX_V  = 20,
-        MIN_W  = 5,
-        MAX_W  = 12,
-        SMOOTH = 0.15;
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        MIN_W   = 5,
+        MAX_W   = 12,
+        SMOOTH  = 0.15;
 
     socket.on("updateSettings", cfg => {
       if (typeof cfg.maxAlpha === "number") MAX_H  = cfg.maxAlpha;
@@ -40,21 +40,22 @@
       if (typeof cfg.minW     === "number") MIN_W  = cfg.minW;
       if (typeof cfg.maxW     === "number") MAX_W  = cfg.maxW;
       if (typeof cfg.smooth   === "number") SMOOTH = cfg.smooth;
-      console.log("Settings:", { MAX_H, MAX_V, MIN_W, MAX_W, SMOOTH });
     });
 
     const SPEED_THRESHOLD = 2000;
 
     // State pro Gerät
-    const alpha0    = {},     // Kalibrier‐Nullpunkt
+    const alpha0    = {},        // Kalibrierungs‐Nullpunkte
           beta0     = {},
-          rawPos    = {},     // aktuelle Roh‐Position (px)
-          smoothPos = {},     // geglättete Position
+          rawPos    = {},        // Letzte rohe Position
+          smoothPos = {},        // Geglättete Position
           lastTime  = {},
           lastWidth = {},
-          lastLight = {},
           lastColor = {},
-          segments  = {};     // id → Array von Segmenten
+          lastLight = {},
+          prev1     = {},        // P1 für Bézier
+          prev2     = {},        // P0 für Bézier
+          segments  = {};        // deviceId → [ {p0,p1,p2,color,w}, ... ]
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
@@ -70,132 +71,126 @@
     });
 
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number") return;
+      if (!deviceId || typeof alpha!=="number") return;
       const now = performance.now();
 
-      // Erster Kontakt anlegen
+      // Erstkontakt initialisieren
       if (!(deviceId in rawPos)) {
-        rawPos[deviceId]    = { x:CX, y:CY };
-        smoothPos[deviceId] = { x:CX, y:CY };
+        rawPos[deviceId]    = {x:CX,y:CY};
+        smoothPos[deviceId] = {x:CX,y:CY};
         lastTime[deviceId]  = now;
-        lastWidth[deviceId] = (MIN_W + MAX_W)/2;
+        lastWidth[deviceId] = (MIN_W+MAX_W)/2;
+        prev1[deviceId]     = null;
+        prev2[deviceId]     = null;
         segments[deviceId]  = [];
+        lastColor[deviceId] = color;
+        lastLight[deviceId] = parseLight(color);
         alpha0[deviceId]    = null;
         beta0 [deviceId]    = null;
-        lastLight[deviceId] = parseLight(color);
-        lastColor[deviceId] = color;
       }
 
-      // Farbe und Helligkeit immer updaten
+      // Immer updaten
       lastColor[deviceId] = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrierung bei erstem Zeichnen
-      if (isDrawing && alpha0[deviceId] === null) {
+      // Kalibrieren beim ersten Zeichnen
+      if (isDrawing && alpha0[deviceId]===null) {
         alpha0[deviceId] = alpha;
         beta0 [deviceId] = beta;
       }
-      if (alpha0[deviceId] === null) return;  // bis hier kalibrieren
+      if (alpha0[deviceId]===null) return;
 
       // Winkel‐Delta + Wrap
       let dA = alpha - alpha0[deviceId];
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
+      if (dA>180)  dA-=360;
+      if (dA<-180) dA+=360;
       let dB = beta - beta0[deviceId];
-
-      // clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Map auf Canvas‐Koordinaten
+      // Rohe Koordinaten
       const rawX = CX - (dA/MAX_H)*CX,
             rawY = CY - (dB/MAX_V)*CY;
 
-      // Glätten: exponential smoothing
+      // Glätten der Position
       const s = smoothPos[deviceId];
-      s.x += (rawX - s.x) * SMOOTH;
-      s.y += (rawY - s.y) * SMOOTH;
+      s.x += (rawX - s.x)*SMOOTH;
+      s.y += (rawY - s.y)*SMOOTH;
 
-      // Geschwindigkeit für Breiten‐Berechnung
+      // Geschwindigkeit
       const prevRaw = rawPos[deviceId],
             dt      = (now - lastTime[deviceId])/1000,
-            dist    = Math.hypot(rawX - prevRaw.x, rawY - prevRaw.y),
+            dist    = Math.hypot(rawX-prevRaw.x, rawY-prevRaw.y),
             speed   = dt>0 ? dist/dt : 0;
       lastTime[deviceId] = now;
-      rawPos[deviceId]   = { x: rawX, y: rawY };
+      rawPos[deviceId]   = {x:rawX,y:rawY};
 
       if (isDrawing) {
-        // normierte Geschwindigkeit [0..1]
-        const norm = Math.min(1, speed / SPEED_THRESHOLD);
-        const rawW = MAX_W - (MAX_W - MIN_W)*norm;
-
-        // glatte Breite
-        const wPrev = lastWidth[deviceId];
-        const w     = wPrev + (rawW - wPrev)*0.3;
+        // Dynamische Breite
+        const norm = Math.min(1, speed/SPEED_THRESHOLD),
+              rawW = MAX_W - (MAX_W-MIN_W)*norm,
+              w    = lastWidth[deviceId] + (rawW - lastWidth[deviceId])*0.3;
         lastWidth[deviceId] = w;
 
-        // Segment vom letzten smoothed‐Punkt zum neuen
-        const lastS = segments[deviceId].length
-          ? segments[deviceId][segments[deviceId].length-1]
-          : null;
-        const fromX = lastS ? lastS.x2 : s.x,
-              fromY = lastS ? lastS.y2 : s.y;
+        // Bézier‐Punkte verschieben
+        prev2[deviceId] = prev1[deviceId];
+        prev1[deviceId] = { x:s.x, y:s.y };
 
-        segments[deviceId].push({
-          x1: fromX,
-          y1: fromY,
-          x2: s.x,
-          y2: s.y,
-          w, color
-        });
+        // Erst ab P0,P1,P2 segmentieren
+        if (prev2[deviceId]) {
+          segments[deviceId].push({
+            p0: prev2[deviceId],
+            p1: prev1[deviceId],
+            p2: { x:s.x, y:s.y },
+            color, w
+          });
+        }
       }
     });
 
-    // Render‐Loop mit Puls
-    let pulse = 0, growing = true;
+    // Render‐Loop
+    let pulse=0, growing=true;
     (function render(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // alle Segmente zeichnen
+      // 1) Bézier‐Segmente zeichnen
       for (let id in segments) {
         for (let seg of segments[id]) {
           ctx.strokeStyle = seg.color;
           ctx.lineWidth   = seg.w;
           ctx.beginPath();
-          ctx.moveTo(seg.x1, seg.y1);
-          ctx.lineTo(seg.x2, seg.y2);
+          ctx.moveTo(seg.p0.x, seg.p0.y);
+          ctx.quadraticCurveTo(seg.p1.x, seg.p1.y, seg.p2.x, seg.p2.y);
           ctx.stroke();
         }
       }
 
-      // Puls‐Berechnung
+      // 2) Pulspunkt an smoothed Pos
       pulse += growing ? 0.2 : -0.2;
-      if (pulse> 2) growing = false;
-      if (pulse<  0) growing = true;
+      if (pulse>2)  growing=false;
+      if (pulse<0)  growing=true;
 
-      // pulsierende Punkte an smoothed‐Position
       for (let id in smoothPos) {
-        const { x, y } = smoothPos[id],
-              col     = lastColor[id]   || "#f00",
-              r       = lastWidth[id]/2 + pulse;
+        const { x,y } = smoothPos[id],
+              col    = lastColor[id]||"#f00",
+              r      = lastWidth[id]/2 + pulse;
 
         ctx.fillStyle = col;
         ctx.beginPath();
-        ctx.arc(x, y, r, 0, 2*Math.PI);
+        ctx.arc(x,y,r,0,2*Math.PI);
         ctx.fill();
 
         if ((lastLight[id]||50) < 20) {
           ctx.strokeStyle = "#fff";
           ctx.lineWidth   = 3;
           ctx.beginPath();
-          ctx.arc(x, y, r+3, 0, 2*Math.PI);
+          ctx.arc(x,y,r+3,0,2*Math.PI);
           ctx.stroke();
         }
       }
 
       requestAnimationFrame(render);
     })();
-
   </script>
 </body>
 </html>
