--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13.5</title>
+  <title>Laserpointer Display v3.13.6</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black }
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.13.5 (Bezier smoothing)</div>
+  <div id="version">v3.13.6 (stroke‐reset on lift)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -27,7 +27,7 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Admin‐Settings
+    // Admin‐Settings (werden per Admin-Panel gesetzt)
     let MAX_H   = 20,
         MAX_V   = 20,
         MIN_W   = 5,
@@ -45,17 +45,18 @@
     const SPEED_THRESHOLD = 2000;
 
     // State pro Gerät
-    const alpha0    = {},        // Kalibrierungs‐Nullpunkte
-          beta0     = {},
-          rawPos    = {},        // Letzte rohe Position
-          smoothPos = {},        // Geglättete Position
-          lastTime  = {},
-          lastWidth = {},
-          lastColor = {},
-          lastLight = {},
-          prev1     = {},        // P1 für Bézier
-          prev2     = {},        // P0 für Bézier
-          segments  = {};        // deviceId → [ {p0,p1,p2,color,w}, ... ]
+    const alpha0      = {},
+          beta0       = {},
+          rawPos      = {},
+          smoothPos   = {},
+          lastTime    = {},
+          lastWidth   = {},
+          lastColor   = {},
+          lastLight   = {},
+          prev1       = {},
+          prev2       = {},
+          wasDrawing  = {},      // merkt uns, ob das Gerät gerade gezeichnet hat
+          segments    = {};      // deviceId → [ {p0,p1,p2,color,w}, ... ]
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
@@ -74,14 +75,15 @@
       if (!deviceId || typeof alpha!=="number") return;
       const now = performance.now();
 
-      // Erstkontakt initialisieren
+      // Initialisierung beim ersten Empfang
       if (!(deviceId in rawPos)) {
-        rawPos[deviceId]    = {x:CX,y:CY};
-        smoothPos[deviceId] = {x:CX,y:CY};
+        rawPos[deviceId]    = { x:CX, y:CY };
+        smoothPos[deviceId] = { x:CX, y:CY };
         lastTime[deviceId]  = now;
         lastWidth[deviceId] = (MIN_W+MAX_W)/2;
         prev1[deviceId]     = null;
         prev2[deviceId]     = null;
+        wasDrawing[deviceId]= false;
         segments[deviceId]  = [];
         lastColor[deviceId] = color;
         lastLight[deviceId] = parseLight(color);
@@ -89,7 +91,7 @@
         beta0 [deviceId]    = null;
       }
 
-      // Immer updaten
+      // Farbe/Helligkeit updaten
       lastColor[deviceId] = color;
       lastLight[deviceId] = parseLight(color);
 
@@ -112,48 +114,55 @@
       const rawX = CX - (dA/MAX_H)*CX,
             rawY = CY - (dB/MAX_V)*CY;
 
-      // Glätten der Position
-      const s = smoothPos[deviceId];
-      s.x += (rawX - s.x)*SMOOTH;
-      s.y += (rawY - s.y)*SMOOTH;
+      // Position glätten
+      const sp = smoothPos[deviceId];
+      sp.x += (rawX-sp.x)*SMOOTH;
+      sp.y += (rawY-sp.y)*SMOOTH;
 
-      // Geschwindigkeit
+      // Geschwindigkeit berechnen
       const prevRaw = rawPos[deviceId],
             dt      = (now - lastTime[deviceId])/1000,
             dist    = Math.hypot(rawX-prevRaw.x, rawY-prevRaw.y),
             speed   = dt>0 ? dist/dt : 0;
       lastTime[deviceId] = now;
-      rawPos[deviceId]   = {x:rawX,y:rawY};
+      rawPos[deviceId]   = { x:rawX, y:rawY };
+
+      // **Stroke‐Reset:** Wenn gerade neu angefangen wird, verwerfen wir prev1/prev2
+      if (isDrawing && !wasDrawing[deviceId]) {
+        prev1[deviceId] = null;
+        prev2[deviceId] = null;
+      }
+      wasDrawing[deviceId] = isDrawing;
 
       if (isDrawing) {
-        // Dynamische Breite
+        // Dynamische Breite je nach Geschwindigkeit
         const norm = Math.min(1, speed/SPEED_THRESHOLD),
               rawW = MAX_W - (MAX_W-MIN_W)*norm,
               w    = lastWidth[deviceId] + (rawW - lastWidth[deviceId])*0.3;
         lastWidth[deviceId] = w;
 
-        // Bézier‐Punkte verschieben
+        // Punkt-Historie schieben
         prev2[deviceId] = prev1[deviceId];
-        prev1[deviceId] = { x:s.x, y:s.y };
+        prev1[deviceId] = { x:sp.x, y:sp.y };
 
-        // Erst ab P0,P1,P2 segmentieren
+        // Erst ab 3 Punkten Bézier‐Segment anlegen
         if (prev2[deviceId]) {
           segments[deviceId].push({
             p0: prev2[deviceId],
             p1: prev1[deviceId],
-            p2: { x:s.x, y:s.y },
+            p2: { x:sp.x, y:sp.y },
             color, w
           });
         }
       }
     });
 
-    // Render‐Loop
+    // Render‐Loop (Linien + Puls‐Punkt)
     let pulse=0, growing=true;
     (function render(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) Bézier‐Segmente zeichnen
+      // 1) Zeichne alle Bézier‐Segmente
       for (let id in segments) {
         for (let seg of segments[id]) {
           ctx.strokeStyle = seg.color;
@@ -165,21 +174,23 @@
         }
       }
 
-      // 2) Pulspunkt an smoothed Pos
+      // 2) Pulsierender Punkt an geglätteter Position
       pulse += growing ? 0.2 : -0.2;
-      if (pulse>2)  growing=false;
-      if (pulse<0)  growing=true;
+      if (pulse>2)  growing = false;
+      if (pulse<0)  growing = true;
 
       for (let id in smoothPos) {
-        const { x,y } = smoothPos[id],
-              col    = lastColor[id]||"#f00",
-              r      = lastWidth[id]/2 + pulse;
+        const { x, y } = smoothPos[id],
+              col     = lastColor[id]||"#f00",
+              r       = lastWidth[id]/2 + pulse;
 
+        // Leuchtpunkt
         ctx.fillStyle = col;
         ctx.beginPath();
         ctx.arc(x,y,r,0,2*Math.PI);
         ctx.fill();
 
+        // Weißer Ring bei niedriger Helligkeit
         if ((lastLight[id]||50) < 20) {
           ctx.strokeStyle = "#fff";
           ctx.lineWidth   = 3;
