--- a/public/display.html
+++ b/public/display.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13.8</title>
+  <title>Laserpointer Display v3.13.9</title>
   <style>
-    body { margin:0; background:black; }
+    body { margin:0; background:black }
     canvas { display:block; margin:auto; background:black }
     #version {
       position:absolute; top:10px; left:10px;
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.13.8 (continuous paths)</div>
+  <div id="version">v3.13.9 (stroke‐separation + fixed widths)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -27,28 +27,28 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    let MAX_H=20, MAX_V=20, MIN_W=5, MAX_W=12, SMOOTH=0.15;
-    socket.on("updateSettings", cfg=>{
-      if(typeof cfg.maxH==="number")  MAX_H  = cfg.maxH;
-      if(typeof cfg.maxV==="number")  MAX_V  = cfg.maxV;
-      if(typeof cfg.minW==="number")  MIN_W  = cfg.minW;
-      if(typeof cfg.maxW==="number")  MAX_W  = cfg.maxW;
-      if(typeof cfg.smooth==="number")SMOOTH = cfg.smooth;
+    // admin‐overrides
+    let MAX_H = 20, MAX_V = 20, MIN_W = 5, MAX_W = 12, SMOOTH = 0.15;
+    socket.on("updateSettings", cfg => {
+      if (typeof cfg.maxAlpha === "number") MAX_H  = cfg.maxAlpha;
+      if (typeof cfg.maxBeta  === "number") MAX_V  = cfg.maxBeta;
+      if (typeof cfg.minW     === "number") MIN_W  = cfg.minW;
+      if (typeof cfg.maxW     === "number") MAX_W  = cfg.maxW;
+      if (typeof cfg.smooth   === "number") SMOOTH = cfg.smooth;
     });
 
-    const SPEED_THRESHOLD = 2000;
+    const SPEED_THRESHOLD = 2000; // px/s → full thin
+
+    // pro Gerät
     const alpha0     = {},
           beta0      = {},
           rawPos     = {},
-          smoothPos  = {},
           lastTime   = {},
           lastWidth  = {},
-          lastColor  = {},
-          lastLight  = {},
-          prev1      = {},
-          prev2      = {},
           wasDrawing = {},
-          segments   = {};
+          segments   = {},    // deviceId → [ stroke1[], stroke2[], ... ]
+          lastColor  = {},
+          lastLight  = {};
 
     ctx.lineCap  = "round";
     ctx.lineJoin = "round";
@@ -58,124 +58,131 @@
       return m ? +m[1] : 50;
     }
 
-    socket.on("clear",()=>{
-      for(let id in segments) segments[id] = [];
+    // komplett löschen
+    socket.on("clear", () => {
+      for (let id in segments) segments[id] = [];
       ctx.clearRect(0,0,c.width,c.height);
     });
 
-    socket.on("motion", ({alpha,beta,color,isDrawing,deviceId})=>{
-      if(!deviceId||typeof alpha!=="number") return;
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha !== "number") return;
       const now = performance.now();
-      // Erstinitialisierung
-      if(!(deviceId in rawPos)){
-        rawPos[deviceId]    = {x:CX,y:CY};
-        smoothPos[deviceId] = {x:CX,y:CY};
+
+      // erste Initialisierung
+      if (!(deviceId in rawPos)) {
+        rawPos[deviceId]    = { x: CX, y: CY };
         lastTime[deviceId]  = now;
-        lastWidth[deviceId] = (MIN_W+MAX_W)/2;
-        prev1[deviceId]     = null;
-        prev2[deviceId]     = null;
-        wasDrawing[deviceId]=false;
+        lastWidth[deviceId] = (MIN_W + MAX_W) / 2;
+        wasDrawing[deviceId] = false;
         segments[deviceId]  = [];
       }
+
       lastColor[deviceId] = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrierung
-      if(isDrawing && alpha0[deviceId]===undefined) {
-        alpha0[deviceId]=alpha;
-        beta0 [deviceId]=beta;
+      // Kalibrierung beim ersten Start‐Druck
+      if (isDrawing && alpha0[deviceId] == null) {
+        alpha0[deviceId] = alpha;
+        beta0 [deviceId] = beta;
       }
-      if(alpha0[deviceId]===undefined) return;
+      if (alpha0[deviceId] == null) return;
 
-      // Delta + clamp
-      let dA=alpha-alpha0[deviceId];
-      if(dA>180)dA-=360; if(dA<-180)dA+=360;
-      let dB=beta-beta0[deviceId];
-      dA=Math.max(-MAX_H,Math.min(MAX_H,dA));
-      dB=Math.max(-MAX_V,Math.min(MAX_V,dB));
+      // Winkel‐Delta + wrap
+      let dA = alpha - alpha0[deviceId];
+      if (dA > 180)  dA -= 360;
+      if (dA < -180) dA += 360;
+      let dB = beta - beta0[deviceId];
 
-      // roher Punkt
-      const rawX = CX - (dA/MAX_H)*CX,
-            rawY = CY - (dB/MAX_V)*CY;
+      // clamp
+      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
+      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // glätten
-      const sp = smoothPos[deviceId];
-      sp.x += (rawX-sp.x)*SMOOTH;
-      sp.y += (rawY-sp.y)*SMOOTH;
+      // auf Canvas‐Koordinaten
+      const rawX = CX - (dA / MAX_H) * CX;
+      const rawY = CY - (dB / MAX_V) * CY;
 
-      // Geschwindigkeit
-      const pr = rawPos[deviceId],
-            dt = (now-lastTime[deviceId])/1000,
-            dist = Math.hypot(rawX-pr.x,rawY-pr.y),
-            speed = dt>0? dist/dt : 0;
-      lastTime[deviceId]=now;
-      rawPos[deviceId]={x:rawX,y:rawY};
+      // Geschwindigkeit berechnen
+      const prev = rawPos[deviceId];
+      const dt   = (now - lastTime[deviceId]) / 1000;
+      const dist = Math.hypot(rawX - prev.x, rawY - prev.y);
+      const speed= dt>0 ? dist/dt : 0;
+      lastTime[deviceId] = now;
 
-      // Wenn man gerade neu zeichnet, Bézier‐History resetten
-      if(isDrawing && !wasDrawing[deviceId]){
-        prev1[deviceId]=null;
-        prev2[deviceId]=null;
+      // Neu-Position zwischenspeichern
+      rawPos[deviceId] = { x: rawX, y: rawY };
+
+      // ✂ Stroke‐Separator
+      if (isDrawing && !wasDrawing[deviceId]) {
+        // beim Übergang von „nicht zeichnen“ → „zeichnen“
+        segments[deviceId].push([]);  // neue Stroke‐Liste
       }
-      wasDrawing[deviceId]=isDrawing;
+      wasDrawing[deviceId] = isDrawing;
 
-      if(isDrawing){
-        // Breite
-        const norm = Math.min(1,speed/SPEED_THRESHOLD),
-              rawW = MAX_W - (MAX_W-MIN_W)*norm,
-              w = lastWidth[deviceId] + (rawW-lastWidth[deviceId])*0.3;
-        lastWidth[deviceId]=w;
-        // Punkte rotieren
-        prev2[deviceId]=prev1[deviceId];
-        prev1[deviceId]={x:sp.x,y:sp.y};
-        // Bézier‐Push (erst ab 3 Punkten)
-        if(prev2[deviceId]){
-          segments[deviceId].push({
-            p0:prev2[deviceId], p1:prev1[deviceId],
-            p2:{x:sp.x,y:sp.y}, w, color
-          });
-        }
+      if (isDrawing) {
+        // Breite je Geschwindigkeit
+        const norm = Math.min(1, speed / SPEED_THRESHOLD);
+        const rawW = MAX_W - (MAX_W - MIN_W) * norm;
+        // glätten der Breite
+        const wPrev = lastWidth[deviceId];
+        const w     = wPrev + (rawW - wPrev) * 0.3;
+        lastWidth[deviceId] = w;
+
+        // Segment an die aktuelle Stroke anhängen
+        const strokeList = segments[deviceId].slice(-1)[0];
+        const seg = {
+          x1: prev.x, y1: prev.y,
+          x2: rawX,  y2: rawY,
+          w, color
+        };
+        strokeList.push(seg);
       }
     });
 
     // Render‐Loop
-    let pulse=0, growing=true;
-    (function render(){
+    let pulse = 0, growing = true;
+    (function render() {
       ctx.clearRect(0,0,c.width,c.height);
 
-      // pro Device einen kompletten Pfad zeichnen
-      for(let id in segments){
-        const segs=segments[id];
-        if(!segs.length) continue;
-        ctx.beginPath();
-        // startpunkt
-        ctx.moveTo(segs[0].p0.x,segs[0].p0.y);
-        for(let s of segs){
-          ctx.strokeStyle = s.color;
-          ctx.lineWidth   = s.w;
-          ctx.quadraticCurveTo(s.p1.x,s.p1.y,s.p2.x,s.p2.y);
+      // 1) jede Stroke separat malen, jedes Segment mit seiner Breite
+      for (let id in segments) {
+        for (let stroke of segments[id]) {
+          for (let s of stroke) {
+            ctx.beginPath();
+            ctx.strokeStyle = s.color;
+            ctx.lineWidth   = s.w;
+            ctx.moveTo(s.x1, s.y1);
+            ctx.lineTo(s.x2, s.y2);
+            ctx.stroke();
+          }
         }
-        ctx.stroke();
       }
 
-      // pulsierender Punkt
-      pulse += growing?0.2:-0.2;
-      if(pulse>2)  growing=false;
-      if(pulse<0)  growing=true;
-      for(let id in smoothPos){
-        const {x,y}=smoothPos[id],
-              col = lastColor[id]||"#f00",
-              r   = lastWidth[id]/2 + pulse;
-        ctx.fillStyle=col;
+      // 2) pulsierender Punkt an der aktuellen Position
+      pulse += growing ? 0.2 : -0.2;
+      if (pulse > 2)  growing = false;
+      if (pulse < 0)  growing = true;
+
+      for (let id in rawPos) {
+        const { x,y } = rawPos[id];
+        const col     = lastColor[id] || "#f00";
+        const r       = lastWidth[id]/2 + pulse;
+
+        // Punkt
         ctx.beginPath();
-        ctx.arc(x,y,r,0,2*Math.PI);
+        ctx.fillStyle = col;
+        ctx.arc(x, y, r, 0, 2*Math.PI);
         ctx.fill();
-        if((lastLight[id]||50)<20){
-          ctx.strokeStyle="#fff"; ctx.lineWidth=3;
+
+        // weißer Ring bei dunkler Farbe
+        if ((lastLight[id] || 50) < 20) {
           ctx.beginPath();
-          ctx.arc(x,y,r+3,0,2*Math.PI);
+          ctx.strokeStyle = "#fff";
+          ctx.lineWidth   = 3;
+          ctx.arc(x, y, r+3, 0, 2*Math.PI);
           ctx.stroke();
         }
       }
+
       requestAnimationFrame(render);
     })();
   </script>
