--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13.9</title>
+  <title>Laserpointer Display v3.14 (Bezier‐Smoothing)</title>
   <style>
     body { margin:0; background:black }
     canvas { display:block; margin:auto; background:black }
@@ -15,20 +15,24 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.13.9 (stroke‐separation + fixed widths)</div>
+  <div id="version">v3.14 (Bezier‐Smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
     socket.emit("identify",{ role:"display", deviceId:null });
 
-    const c    = document.getElementById("canvas"),
-          ctx  = c.getContext("2d"),
-          CX   = c.width/2,
-          CY   = c.height/2;
+    const c     = document.getElementById("canvas"),
+          ctx   = c.getContext("2d"),
+          CX    = c.width/2,
+          CY    = c.height/2;
 
-    // admin‐overrides
-    let MAX_H = 20, MAX_V = 20, MIN_W = 5, MAX_W = 12, SMOOTH = 0.15;
+    // Admin-Einstellungen
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        MIN_W   = 5,
+        MAX_W   = 12,
+        SMOOTH  = 0.15;
     socket.on("updateSettings", cfg => {
       if (typeof cfg.maxAlpha === "number") MAX_H  = cfg.maxAlpha;
       if (typeof cfg.maxBeta  === "number") MAX_V  = cfg.maxBeta;
@@ -37,16 +41,16 @@
       if (typeof cfg.smooth   === "number") SMOOTH = cfg.smooth;
     });
 
-    const SPEED_THRESHOLD = 2000; // px/s → full thin
+    const SPEED_THRESHOLD = 2000;
 
-    // pro Gerät
-    const alpha0     = {},
+    // State pro Gerät
+    const alpha0     = {},   // Kalibrier‐Null
           beta0      = {},
-          rawPos     = {},
+          rawPos     = {},   // Letzte Koord
           lastTime   = {},
           lastWidth  = {},
           wasDrawing = {},
-          segments   = {},    // deviceId → [ stroke1[], stroke2[], ... ]
+          strokes    = {},   // deviceId → [ Stroke1, Stroke2, … ]
           lastColor  = {},
           lastLight  = {};
 
@@ -58,127 +62,131 @@
       return m ? +m[1] : 50;
     }
 
-    // komplett löschen
+    // Canvas komplett löschen
     socket.on("clear", () => {
-      for (let id in segments) segments[id] = [];
+      for (let id in strokes) strokes[id] = [];
       ctx.clearRect(0,0,c.width,c.height);
     });
 
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number") return;
+      if (!deviceId || typeof alpha!=="number") return;
       const now = performance.now();
 
-      // erste Initialisierung
+      // Erst‐Initialisierung
       if (!(deviceId in rawPos)) {
-        rawPos[deviceId]    = { x: CX, y: CY };
+        rawPos[deviceId]    = { x:CX, y:CY };
         lastTime[deviceId]  = now;
-        lastWidth[deviceId] = (MIN_W + MAX_W) / 2;
+        lastWidth[deviceId] = (MIN_W+MAX_W)/2;
         wasDrawing[deviceId] = false;
-        segments[deviceId]  = [];
+        strokes[deviceId]   = [];
       }
 
       lastColor[deviceId] = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrierung beim ersten Start‐Druck
-      if (isDrawing && alpha0[deviceId] == null) {
+      // Kalibrierung beim allerersten Drücken
+      if (isDrawing && alpha0[deviceId]==null) {
         alpha0[deviceId] = alpha;
         beta0 [deviceId] = beta;
       }
-      if (alpha0[deviceId] == null) return;
+      if (alpha0[deviceId]==null) return;
 
-      // Winkel‐Delta + wrap
+      // Winkel‐Delta + Wrap
       let dA = alpha - alpha0[deviceId];
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
+      if (dA>180)  dA-=360;
+      if (dA<-180) dA+=360;
       let dB = beta - beta0[deviceId];
 
-      // clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // auf Canvas‐Koordinaten
-      const rawX = CX - (dA / MAX_H) * CX;
-      const rawY = CY - (dB / MAX_V) * CY;
+      // Mappe auf Canvas
+      const x = CX - (dA/MAX_H)*CX,
+            y = CY - (dB/MAX_V)*CY;
 
-      // Geschwindigkeit berechnen
-      const prev = rawPos[deviceId];
-      const dt   = (now - lastTime[deviceId]) / 1000;
-      const dist = Math.hypot(rawX - prev.x, rawY - prev.y);
-      const speed= dt>0 ? dist/dt : 0;
+      // Geschwindigkeit (px/s)
+      const prev = rawPos[deviceId],
+            dt   = (now-lastTime[deviceId])/1000,
+            dist = Math.hypot(x-prev.x, y-prev.y),
+            speed= dt>0 ? dist/dt : 0;
       lastTime[deviceId] = now;
 
-      // Neu-Position zwischenspeichern
-      rawPos[deviceId] = { x: rawX, y: rawY };
+      rawPos[deviceId] = { x, y };
 
-      // ✂ Stroke‐Separator
+      // Stroke‐Separator
       if (isDrawing && !wasDrawing[deviceId]) {
-        // beim Übergang von „nicht zeichnen“ → „zeichnen“
-        segments[deviceId].push([]);  // neue Stroke‐Liste
+        strokes[deviceId].push([]);  // neue Stroke
       }
       wasDrawing[deviceId] = isDrawing;
 
       if (isDrawing) {
-        // Breite je Geschwindigkeit
-        const norm = Math.min(1, speed / SPEED_THRESHOLD);
-        const rawW = MAX_W - (MAX_W - MIN_W) * norm;
-        // glätten der Breite
-        const wPrev = lastWidth[deviceId];
-        const w     = wPrev + (rawW - wPrev) * 0.3;
+        // Normierte Geschwindigkeit
+        const norm = Math.min(1, speed/SPEED_THRESHOLD),
+              rawW = MAX_W - (MAX_W-MIN_W)*norm,
+              wPrev= lastWidth[deviceId],
+              w    = wPrev + (rawW-wPrev)*0.3;
         lastWidth[deviceId] = w;
 
-        // Segment an die aktuelle Stroke anhängen
-        const strokeList = segments[deviceId].slice(-1)[0];
-        const seg = {
-          x1: prev.x, y1: prev.y,
-          x2: rawX,  y2: rawY,
-          w, color
-        };
-        strokeList.push(seg);
+        // Punkt in den aktuellen Stroke
+        const currStrokes = strokes[deviceId];
+        const ptList = currStrokes[currStrokes.length-1];
+        ptList.push({ x, y, w, color });
       }
     });
 
-    // Render‐Loop
-    let pulse = 0, growing = true;
-    (function render() {
+    // Glattzeichnen einer Punkt‐Liste mit Quadratic‐Splines
+    function drawStroke(points) {
+      if (points.length<2) return;
+      ctx.beginPath();
+      ctx.moveTo(points[0].x, points[0].y);
+      for (let i=1; i<points.length-1; i++) {
+        const p0 = points[i-1],
+              p1 = points[i],
+              p2 = points[i+1],
+              cx = (p1.x + p2.x)/2,
+              cy = (p1.y + p2.y)/2;
+        ctx.lineWidth = p1.w;
+        ctx.strokeStyle= p1.color;
+        ctx.quadraticCurveTo(p1.x, p1.y, cx, cy);
+      }
+      // letzter Punkt
+      const last = points[points.length-1];
+      ctx.lineWidth = last.w;
+      ctx.strokeStyle= last.color;
+      ctx.lineTo(last.x, last.y);
+      ctx.stroke();
+    }
+
+    // Render‐Loop mit Puls
+    let pulse=0, growing=true;
+    (function render(){
       ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) jede Stroke separat malen, jedes Segment mit seiner Breite
-      for (let id in segments) {
-        for (let stroke of segments[id]) {
-          for (let s of stroke) {
-            ctx.beginPath();
-            ctx.strokeStyle = s.color;
-            ctx.lineWidth   = s.w;
-            ctx.moveTo(s.x1, s.y1);
-            ctx.lineTo(s.x2, s.y2);
-            ctx.stroke();
-          }
+      // 1) Jede Stroke glatt zeichnen
+      for (let id in strokes) {
+        for (let pts of strokes[id]) {
+          drawStroke(pts);
         }
       }
 
-      // 2) pulsierender Punkt an der aktuellen Position
-      pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2)  growing = false;
-      if (pulse < 0)  growing = true;
+      // 2) Pulsierender Punkt
+      pulse += growing?0.2:-0.2;
+      if (pulse>2) growing=false;
+      if (pulse<0) growing=true;
 
       for (let id in rawPos) {
-        const { x,y } = rawPos[id];
-        const col     = lastColor[id] || "#f00";
-        const r       = lastWidth[id]/2 + pulse;
-
-        // Punkt
+        const { x,y } = rawPos[id],
+              w       = lastWidth[id]/2 + pulse,
+              col     = lastColor[id] || "#f00";
         ctx.beginPath();
         ctx.fillStyle = col;
-        ctx.arc(x, y, r, 0, 2*Math.PI);
+        ctx.arc(x,y,w,0,2*Math.PI);
         ctx.fill();
-
-        // weißer Ring bei dunkler Farbe
-        if ((lastLight[id] || 50) < 20) {
+        if ((lastLight[id]||50)<20) {
+          ctx.strokeStyle="#fff";
+          ctx.lineWidth=3;
           ctx.beginPath();
-          ctx.strokeStyle = "#fff";
-          ctx.lineWidth   = 3;
-          ctx.arc(x, y, r+3, 0, 2*Math.PI);
+          ctx.arc(x,y,w+3,0,2*Math.PI);
           ctx.stroke();
         }
       }
